add backend basic auth